--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+<meta property="og:url" content="https://alessiomar.github.io/article_natale/">
+<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Venere_Callipige_Napoli.jpg/500px-Venere_Callipige_Napoli.jpg">
+<meta property="og:type" content="article">
+  
   <meta charset="UTF-8">
   <title>Titolo dell'articolo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
