--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </p>
 
         <p>
-          Ma non è finita qui, e arriviamo ora alla parte più sbalorditiva della ricerca. Per le persone che praticavano sesso anale con regolarità la probabilità di litigare praticamente si azzerava, la probabilità di incorrere in problemi cardio-vascolari scendeva di un terzo e l'aspettativa di vita viene stimata in ulterori due anni. Lo studio segnala che tali risultati sono additivi rispetto alla <em>baseline</em> di chi faceva sesso almeno tre volte la settimana. Viene anche documentato che il rischio di gravidanze non desidarate scendeva sotto il 5%. Tali risultati sono robusti anche se il sesso anale veniva praticato su ovini.
+          Ma non è finita qui, e arriviamo ora alla parte più sbalorditiva della ricerca. Per le persone che praticavano sesso anale con regolarità la probabilità di litigare praticamente si azzerava, la probabilità di incorrere in problemi cardio-vascolari scendeva di un terzo e l'aspettativa di vita viene stimata in ulterori due anni. Lo studio segnala che tali risultati sono additivi rispetto alla <em>baseline</em> di chi faceva sesso almeno tre volte la settimana. Viene anche documentato che il rischio di gravidanze non desidarate scendeva sotto il 5%. Tali risultati risultano robusti anche se il sesso anale veniva praticato su ovini.
         </p>
 
         <h3>L'inizio di una nuova era?</h3>
@@ -107,7 +107,7 @@ Ma quello che preme a noi segnalarvi, cari lettori, è che finalmente, in quelle
         </blockquote>
 
         <p>
-          Cari lettori, siamo lieti di annunciarvi che siete tutti invitati il prossimo 27 dicembre all'orgia anale presso casa Albini-Moccaldi in <code>via Antonio Nimby 3</code> dalle 16 fino a notte inoltrata, all'insegna del divertimento, della salute e per chi avrà il culo più chiacchierato ci sarà un premio speciale.
+          Cari lettori, nel pieno spirito del Natale, siamo lieti di annunciarvi che siete tutti invitati il prossimo 27 dicembre all'orgia anale presso casa Albisini-Moccaldi in <code>via Antonio Nimby 3</code> dalle 16 fino a notte inoltrata, all'insegna del divertimento, della salute e, per chi avrà il culo più chiacchierato della serata, ci sarà un premio speciale.
         </p>
 
 
