--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Una breve descrizione del tuo articolo, che comparirà anche nelle anteprime dei social.">
 
   <!-- Open Graph for WhatsApp / Facebook / etc. -->
-  <meta property="og:title" content="Once you go back, you dont' came back">
+  <meta property="og:title" content="Once you go back, you don't came back">
   <meta property="og:description" content="Finalmente la scienza vendica milioni di uomini.">
   <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Venere_Callipige_Napoli.jpg/500px-Venere_Callipige_Napoli.jpg">
   <meta property="og:url" content="https://example.com/tuo-link">
