--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Ma quello che preme a noi segnalarvi, cari lettori, è che finalmente, in quelle
         </blockquote>
 
         <p>
-          Cari lettori, nel pieno spirito del Natale, siamo lieti di annunciarvi che siete tutti invitati il prossimo 27 dicembre all'orgia anale presso casa Albisini-Moccaldi in <code>via Antonio Nimby 3</code> dalle 16 fino a notte inoltrata, all'insegna del divertimento, della salute e, per chi avrà il culo più chiacchierato della serata, ci sarà un premio speciale.
+          Cari lettori, nel pieno spirito del Natale, siamo lieti di annunciarvi che siete tutti invitati il prossimo 27 dicembre all'orgia anale presso casa Albisinni-Moccaldi in <code>via Antonio Nimby 3</code> dalle 16 fino a notte inoltrata, all'insegna del divertimento, della salute e, per chi avrà il culo più chiacchierato della serata, ci sarà un premio speciale.
         </p>
 
 
